@@ -8,6 +8,8 @@ Version 1.2.6+svn:
  * multiplayer maps:
    * revised maps: Blitz, Cynsaun Battlefield, Hamlets, Meteor Lake
    * fixed a crash if the client recieves invalid utf-8
+   * fixed a server side bug with could cause invalid utf-8 being send to a
+     client.
  * misc:
    * really fix the trait OOS so it works correctly on Windows as well
    * map label length is correctly determined for multibyte 
